# django_blackbox

./: .gitignore  CONFIGURATION_EXAMPLES.md  INSTALLATION.md  LICENSE  PUBLISH.md  PYPI_UPLOAD_GUIDE.md  QUICKSTART.md  README.md  VIEW_MODIFICATION_GUIDE.md  pyproject.toml  setup.py
django_blackbox/: __init__.py  activity_tracking.py  admin.py  apps.py  conf.py  exceptions.py  helpers.py  middleware.py  models.py  request_id.py  serializers.py  services.py  utils.py
django_blackbox/activity/: __init__.py  decorators.py  utils.py
django_blackbox/api/: __init__.py  permissions.py  serializers.py  urls.py  views.py
django_blackbox/drf/: __init__.py  exception_handler.py
django_blackbox/management/: __init__.py
django_blackbox/management/commands/: prune_incidents.py
django_blackbox/migrations/: 0001_initial.py  0002_incident_valid_status.py  __init__.py
tests/: __init__.py  test_activity.py  test_drf_handler.py  test_middleware.py  test_models.py  test_redaction.py  test_utils.py
